# oatpp-template

./: .env  .gitignore  CMakeLists.txt  cheatsheet.txt  debug-valgrind.sh  debug.sh  start.sh
src/: App.cpp  AppComponent.hpp
src/auth/: AuthConfig.hpp  AuthInterceptor.hpp  JwksCache.hpp  JwtVerifier.hpp
src/controller/: MyAuthController.cpp  MyAuthController.hpp
src/model/: Student.cpp  Student.hpp  TestCode.cpp  TestCode.hpp
test/: StudentTest.cpp  StudentTest.hpp  TestCodeTest.cpp  TestCodeTest.hpp  tests.cpp
utility/: install-oatpp-with-test.sh
